--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "homepage": "https://www.iosb-ina.fraunhofer.de/",
     "license": "Apache-2.0",
     "workspaces": [
-        "./projects/common",
-        "./projects/aas-server",
-        "./projects/aas-lib",
-        "./projects/aas-portal"
+        "projects/fhg-jest",
+        "projects/common",
+        "projects/aas-server",
+        "projects/aas-lib",
+        "projects/aas-portal"
     ],
     "dependencies": {
         "@angular/animations": "^17.3.4",
@@ -126,7 +127,10 @@
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
+        "fhg-jest": "./projects/fhg-jest",
+        "jasmine": "^5.1.0",
         "jasmine-core": "^5.1.2",
+        "jasmine-ts": "^0.4.0",
         "jest": "^29.7.0",
         "karma": "^6.4.3",
         "karma-chrome-launcher": "^3.2.0",
