--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
                         "index": "projects/aas-portal/src/index.html",
                         "browser": "projects/aas-portal/src/main.ts",
                         "polyfills": [
-                            "zone.js"
+                            "zone.js",
+                            "@angular/localize/init"
                         ],
                         "tsConfig": "projects/aas-portal/tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
@@ -96,7 +97,8 @@
                     "options": {
                         "polyfills": [
                             "zone.js",
-                            "zone.js/testing"
+                            "zone.js/testing",
+                            "@angular/localize/init"
                         ],
                         "tsConfig": "projects/aas-portal/tsconfig.spec.json",
                         "karmaConfig": "projects/aas-portal/karma.conf.cjs",
