--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
                 "ASSETS": "projects/aas-server/src/assets",
                 // "USER_STORAGE": "mongodb://localhost:27017/aasportal-users",
                 // "TEMPLATE_STORAGE": "http://localhost:8080/templates",
-                "AAS_INDEX": "mysql://localhost:3306",
+                // "AAS_INDEX": "mysql://localhost:3306",
                 "ENDPOINTS": "[\"file:///endpoints/samples?name=Samples\"]",
             }
         },
