fix: update AASTreeComponent

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "Qualifiable",
         "rechtlich",
         "selbstaendige",
+        "Sematics",
         "submodel",
         "tsoa",
         "tsyringe",
