Update nginx.conf: added resolver for docker dns

--- a/projects/aas-portal/nginx.conf
+++ b/projects/aas-portal/nginx.conf
@@ -12,7 +12,9 @@ http {
     sendfile             on;
     keepalive_timeout    65;
     client_max_body_size 100M;
-
+    
+    resolver 127.0.0.11 ipv6=off;
+    
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
