Update nginx.conf: changed resolver again

--- a/projects/aas-portal/nginx.conf
+++ b/projects/aas-portal/nginx.conf
@@ -13,8 +13,6 @@ http {
     keepalive_timeout    65;
     client_max_body_size 100M;
     
-    resolver 127.0.0.11 ipv6=off;
-    
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
@@ -26,11 +24,14 @@ http {
         }
 
         location /api/ {
+                resolver 127.0.0.11;
                 proxy_pass http://aas-server:1337;
                 proxy_http_version 1.1;
         }
 
         location /websocket {
+            resolver 127.0.0.11;
+
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
