--- a/Dockerfile.aas-server
+++ b/Dockerfile.aas-server
@@ -21,6 +21,7 @@ COPY projects/aas-server/src/assets assets/
 ENV NODE_LOG=./log/debug.log
 ENV NODE_SERVER_PORT=1337
 ENV USER_STORAGE=mongodb://172.16.160.178:27017/aasportal-users
+ENV AAS_INDEX=mysql://172.16.160.171:3306
 ENV ENDPOINTS=["\"file:///endpoints/samples?name=Samples\""]
 ENV NODE_ENV=production
 
