--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
                 "WEB_ROOT": "projects/aas-portal/dist",
                 "ASSETS": "projects/aas-server/src/assets",
                 // "USER_STORAGE": "mongodb://localhost:27017/aasportal-users",
-                "USER_STORAGE": "mongodb://172.16.160.178:27017/aasportal-users",
+                // "USER_STORAGE": "mongodb://172.16.160.178:27017/aasportal-users",
                 // "TEMPLATE_STORAGE": "http://localhost:8080/templates",
                 // "AAS_INDEX": "mysql://172.16.160.171:3306",
                 "ENDPOINTS": "[\"file:///endpoints/samples?name=Samples\"]",
