fix: some updates

--- a/Dockerfile.aas-portal
+++ b/Dockerfile.aas-portal
@@ -1,10 +1,10 @@
 # Dockerfile to build server and client parts
-FROM node:lts-alpine3.19 as build
+FROM node:lts-alpine3.19 AS build
 WORKDIR /usr/src/app
 COPY . .
 RUN npm install
 RUN npm run aas-portal:build
-FROM nginx:latest as aas-portal
+FROM nginx:latest AS aas-portal
 #possibility to check host & port availability of other containers via netcat
 RUN apt-get update -y && apt-get install -y netcat-openbsd
 COPY --from=build /usr/src/app/projects/aas-portal/dist/browser/ /usr/share/nginx/html/
