--- a/Dockerfile.aas-server
+++ b/Dockerfile.aas-server
@@ -1,5 +1,5 @@
 # Dockerfile to build server and client parts
-FROM node:lts-alpine3.19 as build
+FROM node:lts-alpine3.19 AS build
 WORKDIR /usr/src/app
 COPY . .
 # RUN apk add g++ make py3-pip
@@ -7,7 +7,7 @@ RUN npm install
 RUN node --no-warnings --loader ts-node/esm create-app-info.ts
 RUN npm run aas-server:build
 
-FROM node:lts-alpine3.19 as aas-server
+FROM node:lts-alpine3.19 AS aas-server
 RUN apk upgrade --update-cache --available && apk add openssl && rm -rf /var/cache/apk/*
 WORKDIR /usr/src/app
 COPY package.json package.json
@@ -20,8 +20,9 @@ RUN npm install -w=aas-server --omit=dev
 COPY projects/aas-server/src/assets assets/
 ENV NODE_LOG=./log/debug.log
 ENV NODE_SERVER_PORT=1337
-ENV USER_STORAGE=mongodb://172.16.160.178:27017/aasportal-users
-ENV AAS_INDEX=mysql://172.16.160.171:3306
+ENV USER_STORAGE=mongodb://172.16.160.177:27017/aasportal-users
+ENV AAS_INDEX=mysql://172.16.160.177:3306
+ENV TEMPLATE_STORAGE: http://172.16.160.177:8080/templates
 ENV ENDPOINTS=["\"file:///endpoints/samples?name=Samples\""]
 ENV NODE_ENV=production
 
