--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "aas-portal:build:debug": "npm run build:build -w aas-core -w aas-lib -w aas-portal",
         "aas-server:build": "npm run build -w aas-core -w aas-server",
         "aas-server:build:debug": "npm run build:debug -w aas-core -w aas-server",
-        "serve": "npm run build && node --env-file projects/aas-server/.env projects/aas-server/dist/aas-server.js"
+        "serve": "npm run build && node --env-file projects/aas-server/.env projects/aas-server/dist/aas-server.js",
+        "create-app-info": "node --no-warnings --loader ts-node/esm create-app-info.ts"
     },
     "repository": {
         "type": "git",
@@ -52,54 +53,55 @@
         "@ngx-translate/core": "^15.0.0",
         "@ngx-translate/http-loader": "^8.0.0",
         "@popperjs/core": "^2.11.8",
-        "@xmldom/xmldom": "^0.8.10",
+        "@xmldom/xmldom": "^0.9.2",
+        "aas-core": "projects/aas-core",
         "bcryptjs": "^2.4.3",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
-        "chart.js": "^4.4.3",
+        "chart.js": "^4.4.4",
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "form-data": "^4.0.0",
-        "jimp": "^0.22.12",
+        "jimp": "^1.3.0",
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
         "jwt-decode": "^4.0.0",
         "lodash-es": "^4.17.21",
         "lowdb": "^7.0.1",
-        "mongoose": "^8.5.1",
+        "mongoose": "^8.6.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "mysql2": "^3.10.2",
+        "mysql2": "^3.11.0",
         "node-opcua": "^2.128.0",
         "node-opcua-client-crawler": "^2.124.0",
-        "nodemailer": "^6.9.14",
+        "nodemailer": "^6.9.15",
         "reflect-metadata": "^0.2.2",
         "rxjs": "~7.8.1",
         "swagger-ui-express": "^5.0.1",
-        "tslib": "^2.6.3",
+        "tslib": "^2.7.0",
         "tsoa": "^5.1.1",
         "tsyringe": "^4.8.0",
         "uuid": "^10.0.0",
-        "webdav": "^5.6.0",
-        "winston": "^3.13.1",
+        "webdav": "^5.7.1",
+        "winston": "^3.14.2",
         "winston-daily-rotate-file": "^5.0.0",
         "ws": "^8.18.0",
         "xpath": "^0.0.34",
         "zone.js": "~0.14.7"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^18.2.2",
+        "@angular-devkit/build-angular": "^18.2.3",
         "@angular-eslint/builder": "18.3.0",
         "@angular-eslint/eslint-plugin": "18.3.0",
         "@angular-eslint/eslint-plugin-template": "18.3.0",
         "@angular-eslint/schematics": "18.3.0",
         "@angular-eslint/template-parser": "18.3.0",
-        "@angular/cli": "^18.2.2",
+        "@angular/cli": "^18.2.3",
         "@angular/compiler-cli": "^18.2.3",
-        "@babel/plugin-syntax-import-attributes": "^7.24.7",
+        "@babel/plugin-syntax-import-attributes": "^7.25.6",
         "@jest/globals": "^29.7.0",
         "@semantic-release/git": "^10.0.1",
-        "@semantic-release/github": "^10.1.0",
+        "@semantic-release/github": "^10.3.3",
         "@types/bcryptjs": "^2.4.6",
         "@types/bootstrap": "^5.2.10",
         "@types/cors": "^2.8.17",
@@ -109,26 +111,26 @@
         "@types/jsonwebtoken": "^9.0.6",
         "@types/lodash-es": "^4.17.12",
         "@types/morgan": "^1.9.9",
-        "@types/multer": "^1.4.11",
+        "@types/multer": "^1.4.12",
         "@types/node": "^20.14.10",
         "@types/nodemailer": "^6.4.15",
         "@types/supertest": "^6.0.2",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/uuid": "^10.0.0",
-        "@types/ws": "^8.5.11",
+        "@types/ws": "^8.5.12",
         "@typescript-eslint/eslint-plugin": "^7.16.0",
         "@typescript-eslint/parser": "^7.16.0",
         "babel-plugin-transform-import-meta": "^2.2.1",
-        "esbuild": "^0.23.0",
+        "esbuild": "^0.23.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-prettier": "^5.2.1",
         "fhg-jest": "./projects/fhg-jest",
-        "jasmine": "^5.1.0",
-        "jasmine-core": "^5.1.2",
+        "jasmine": "^5.2.0",
+        "jasmine-core": "^5.2.0",
         "jasmine-ts": "^0.4.0",
         "jest": "^29.7.0",
-        "karma": "^6.4.3",
+        "karma": "^6.4.4",
         "karma-chrome-launcher": "^3.2.0",
         "karma-coverage": "^2.2.1",
         "karma-jasmine": "^5.1.0",
@@ -137,10 +139,10 @@
         "ng-packagr": "^18.2.1",
         "prettier": "^3.3.3",
         "rimraf": "^6.0.1",
-        "semantic-release": "^24.0.0",
+        "semantic-release": "^24.1.0",
         "supertest": "^7.0.0",
-        "ts-jest": "^29.2.2",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
-        "typescript": "^5.4.5"
+        "typescript": "^5.5.4"
     }
 }
