fix: update docker files

--- a/Dockerfile.aas-server
+++ b/Dockerfile.aas-server
@@ -11,21 +11,18 @@ FROM node:lts-alpine3.19 AS aas-server
 RUN apk upgrade --update-cache --available && apk add openssl && rm -rf /var/cache/apk/*
 WORKDIR /usr/src/app
 COPY package.json package.json
-COPY projects/aas-server/package.json projects/aas-server/package.json
+COPY projects/aas-server/package.json package.json
+COPY projects/aas-server/src/assets assets/
+RUN npm install --omit=dev
 COPY --from=build /usr/src/app/projects/aas-server/dist/ /usr/src/app/
 COPY --from=build /usr/src/app/projects/aas-server/app-info.json /usr/src/app/app-info.json
 COPY --from=build /usr/src/app/projects/aas-core/dist/ /usr/src/app/node_modules/aas-core/dist/
 COPY --from=build /usr/src/app/projects/aas-core/package.json /usr/src/app/node_modules/aas-core/package.json
-RUN npm install -w=aas-server --omit=dev
-COPY projects/aas-server/src/assets assets/
 ENV NODE_LOG=./log/debug.log
 ENV NODE_SERVER_PORT=1337
 ENV USER_STORAGE=mongodb://172.16.160.177:27017/aasportal-users
 ENV AAS_INDEX=mysql://172.16.160.177:3306
-<<<<<<< HEAD
-=======
 ENV TEMPLATE_STORAGE: http://172.16.160.177:8080/templates
->>>>>>> acd45b6be65e2f6471beebcdadbbf8a043b25821
 ENV ENDPOINTS=["\"file:///endpoints/samples?name=Samples\""]
 ENV NODE_ENV=production
 
