fix: generating app-info.json updated

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,6 @@ coverage
 libpeerconnection.log
 testem.log
 typings
-./aas-server-config.json
 reports
 .nyc_output
 temp
@@ -46,9 +45,9 @@ temp
 swagger.json
 swagger.yaml
 projects/aas-server/src/app/routes
+projects/ass-server/src/assets/app-info.json
 
 # System files
 .DS_Store
 Thumbs.db
 .VSCodeCounter
-aas-server-config.json
