--- a/Dockerfile.aas-portal
+++ b/Dockerfile.aas-portal
@@ -1,5 +1,5 @@
 # Dockerfile to build server and client parts
-FROM node:lts-alpine3.19 AS build
+FROM node:alpine3.19 AS build
 WORKDIR /usr/src/app
 COPY . .
 RUN npm install
