--- a/Dockerfile.aas-server
+++ b/Dockerfile.aas-server
@@ -1,5 +1,5 @@
 # Dockerfile to build server and client parts
-FROM node:lts-alpine3.19 as build
+FROM node:alpine3.19 as build
 WORKDIR /usr/src/app
 COPY . .
 # RUN apk add g++ make py3-pip
@@ -7,14 +7,13 @@ RUN npm install
 RUN node --no-warnings --loader ts-node/esm create-app-info.ts
 RUN npm run aas-server:build
 
-FROM node:lts-alpine3.19 AS aas-server
+FROM node:alpine3.19 AS aas-server
 RUN apk upgrade --update-cache --available && apk add openssl && rm -rf /var/cache/apk/*
 WORKDIR /usr/src/app
 COPY projects/aas-server/package.json package.json
 COPY projects/aas-server/src/assets assets/
 RUN npm install --omit=dev
 COPY --from=build /usr/src/app/projects/aas-server/dist/ /usr/src/app/
-COPY --from=build /usr/src/app/projects/aas-server/app-info.json /usr/src/app/app-info.json
 COPY --from=build /usr/src/app/projects/aas-core/dist/ /usr/src/app/node_modules/aas-core/dist/
 COPY --from=build /usr/src/app/projects/aas-core/package.json /usr/src/app/node_modules/aas-core/package.json
 ENV NODE_LOG=./log/debug.log
