--- a/package.json
+++ b/package.json
@@ -39,15 +39,16 @@
         "projects/aas-portal"
     ],
     "dependencies": {
-        "@angular/animations": "^18.2.3",
-        "@angular/common": "^18.2.3",
-        "@angular/compiler": "^18.2.3",
-        "@angular/core": "^18.2.3",
-        "@angular/forms": "^18.2.3",
+        "@angular/animations": "^18.2.4",
+        "@angular/common": "^18.2.4",
+        "@angular/compiler": "^18.2.4",
+        "@angular/core": "^18.2.4",
+        "@angular/elements": "^18.2.4",
+        "@angular/forms": "^18.2.4",
         "@angular/localize": "^18.2.3",
-        "@angular/platform-browser": "^18.2.3",
-        "@angular/platform-browser-dynamic": "^18.2.3",
-        "@angular/router": "^18.2.3",
+        "@angular/platform-browser": "^18.2.4",
+        "@angular/platform-browser-dynamic": "^18.2.4",
+        "@angular/router": "^18.2.4",
         "@babel/polyfill": "^7.4.4",
         "@ng-bootstrap/ng-bootstrap": "^17.0.1",
         "@ngx-translate/core": "^15.0.0",
@@ -87,17 +88,17 @@
         "winston-daily-rotate-file": "^5.0.0",
         "ws": "^8.18.0",
         "xpath": "^0.0.34",
-        "zone.js": "~0.14.7"
+        "zone.js": "~0.14.10"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^18.2.3",
-        "@angular-eslint/builder": "18.3.0",
-        "@angular-eslint/eslint-plugin": "18.3.0",
-        "@angular-eslint/eslint-plugin-template": "18.3.0",
-        "@angular-eslint/schematics": "18.3.0",
-        "@angular-eslint/template-parser": "18.3.0",
-        "@angular/cli": "^18.2.3",
-        "@angular/compiler-cli": "^18.2.3",
+        "@angular-devkit/build-angular": "^18.2.4",
+        "@angular-eslint/builder": "18.3.1",
+        "@angular-eslint/eslint-plugin": "18.3.1",
+        "@angular-eslint/eslint-plugin-template": "18.3.1",
+        "@angular-eslint/schematics": "18.3.1",
+        "@angular-eslint/template-parser": "18.3.1",
+        "@angular/cli": "^18.2.4",
+        "@angular/compiler-cli": "^18.2.4",
         "@babel/plugin-syntax-import-attributes": "^7.25.6",
         "@jest/globals": "^29.7.0",
         "@semantic-release/git": "^10.0.1",
@@ -112,7 +113,7 @@
         "@types/lodash-es": "^4.17.12",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.12",
-        "@types/node": "^20.14.10",
+        "@types/node": "^20.11.1",
         "@types/nodemailer": "^6.4.15",
         "@types/supertest": "^6.0.2",
         "@types/swagger-ui-express": "^4.1.6",
