--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "aas-portal-project",
     "version": "3.0.0-development.94",
-    "description": "Web-based visualization and control of aaset administration shells.",
+    "description": "Web-based visualization and control of asset administration shells.",
     "type": "module",
     "scripts": {
         "create-app-info": "node --no-warnings --loader ts-node/esm create-app-info.ts",
