--- a/projects/aas-server/src/assets/app-info.json
+++ b/projects/aas-server/src/assets/app-info.json
@@ -1,7 +1,7 @@
 {
   "name": "aas-portal-project",
   "version": "3.0.0-development.94",
-  "description": "Web-based visualization and control of aaset administration shells.",
+  "description": "Web-based visualization and control of asset administration shells.",
   "author": "Fraunhofer IOSB-INA",
   "homepage": "https://www.iosb-ina.fraunhofer.de/",
   "license": "Apache-2.0",
@@ -92,13 +92,6 @@
       "description": "Angular - the core framework",
       "license": "MIT",
       "licenseText": "The MIT License\n\nCopyright (c) 2010-2024 Google LLC. https://angular.io/license\n\nPermission is hereby granted, free of charge, to any person obtaining a copy\nof this software and associated documentation files (the \"Software\"), to deal\nin the Software without restriction, including without limitation the rights\nto use, copy, modify, merge, publish, distribute, sublicense, and/or sell\ncopies of the Software, and to permit persons to whom the Software is\nfurnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in\nall copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\nIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\nFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\nAUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\nLIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\nOUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\nTHE SOFTWARE.\n"
-    },
-    {
-      "name": "@angular/elements",
-      "version": "18.2.4",
-      "description": "Angular - library for using Angular Components as Custom Elements",
-      "license": "MIT",
-      "licenseText": ""
     },
     {
       "name": "@angular/forms",
