--- a/projects/aasportal-cloud/docker-compose.yml
+++ b/projects/aasportal-cloud/docker-compose.yml
@@ -1,38 +1,36 @@
-version: '2'
-
 volumes:
   nextcloud:
-  db:
+  nextcloud_db:
 
 services:
-  db:
+  aasportal-cloud-db:
     image: mariadb
-    container_name: nextcloud_db
+    container_name: aasportal-cloud-db
     restart: always
     command: --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
     volumes:
-      - db:/var/lib/mysql
+      - nextcloud_db:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${NEXTCLOUD_MYSQL_ROOT_PASSWORD}
+      - MYSQL_PASSWORD=${NEXTCLOUD_MYSQL_PASSWORD}
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
 
-  app:
+  aasportal-cloud-app:
     image: nextcloud
-    container_name: nextcloud_server
+    container_name: aasportal-cloud-app
     restart: always
     ports:
-      - ${HTTP_PORT}:80
+      - 8080:80
     links:
-      - db
+      - aasportal-cloud-db
     volumes:
       - nextcloud:/var/www/html
     environment:
-      - MYSQL_PASSWORD=aas-server
+      - MYSQL_PASSWORD=${NEXTCLOUD_MYSQL_PASSWORD}
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
-      - MYSQL_HOST=db
+      - MYSQL_HOST=aasportal-cloud-db
       - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
       - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
       - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_TRUSTED_DOMAINS}
