--- a/.env
+++ b/.env
@@ -11,6 +11,9 @@ NEXTCLOUD_ADMIN_USER=aas-server
 NEXTCLOUD_ADMIN_PASSWORD=5w0vmrkzrwDIDyZs
 NEXTCLOUD_TRUSTED_DOMAINS=localhost
 
+NODE_ENV=production
+NODE_SERVER_PORT=1337
 AAS_INDEX=mysql://aas-server:60PYRe6Vd8C99u4n@aasportal-index:3306
 USER_STORAGE=mongodb://aas-server:bObXJWW6e8Nh78YF@aasportal-users:27017/aasportal-users
 TEMPLATE_STORAGE=http://aas-server:5w0vmrkzrwDIDyZs@aasportal-cloud:8080/templates
+ENDPOINTS=["file:///endpoints/samples?name=Samples"]
